--- a/lab3/code/Makefile
+++ b/lab3/code/Makefile
@@ -1,4 +1,4 @@
 makelab:
 	rm -f client/c client/c.o server/s server/s.o common/messages.o
 	gcc client/client.c -o client/c
-	gcc server/server.c -o server/s
+	gcc server/server.c -o server/s -lpthread
